--- a/app/views/novedades/calendar/crearFechaMasivaNovedad.scala.html
+++ b/app/views/novedades/calendar/crearFechaMasivaNovedad.scala.html
@@ -2,7 +2,7 @@
 @import helper._
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
-@helper.form(action = controllers.rrhh.routes.NovedadesController.guardarMasivo(), 'id -> "formNovedades") {
+@helper.form(action = controllers.novedades.routes.NovedadesController.guardarMasivo(), 'id -> "formNovedades") {
 
 
 	@views.html.tags.successError()
