--- a/app/views/novedades/calendar/crearNovedad.scala.html
+++ b/app/views/novedades/calendar/crearNovedad.scala.html
@@ -1,7 +1,7 @@
 @(lineaForm: Form[Novedad])
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
-@helper.form(action = controllers.rrhh.routes.NovedadesController.guardar(), 'id -> "formNovedades") {
-	@views.html.rrhh.novedades.formNovedad(lineaForm)
+@helper.form(action = controllers.novedades.routes.NovedadesController.guardar(), 'id -> "formNovedades") {
+	@views.html.novedades.calendar.formNovedad(lineaForm)
 }
