--- a/app/views/novedades/calendar/verNovedad.scala.html
+++ b/app/views/novedades/calendar/verNovedad.scala.html
@@ -2,10 +2,10 @@
 
 <div class="row menu-acciones">
 	<div class="col-sm-10">
-		<a href="@controllers.rrhh.routes.NovedadesController.editar(linea.id)"  class="btn btn-default" id="btnModificar"><i class="glyphicon glyphicon-edit"></i> Editar</a>
-		<a href="@controllers.rrhh.routes.NovedadesController.eliminar(linea.id)"  class="btn btn-default delete-confirm-link"><i class="glyphicon glyphicon-trash icono-eliminar"></i> Eliminar</a>
+		<a href="@controllers.novedades.routes.NovedadesController.editar(linea.id)"  class="btn btn-default" id="btnModificar"><i class="glyphicon glyphicon-edit"></i> Editar</a>
+		<a href="@controllers.novedades.routes.NovedadesController.eliminar(linea.id)"  class="btn btn-default delete-confirm-link"><i class="glyphicon glyphicon-trash icono-eliminar"></i> Eliminar</a>
 	</div>
-</div>	
+</div>
 
 
 <div class="row">
@@ -37,7 +37,7 @@
 <div class="row ">
 
 	<div class="col-sm-12">
-		<label for="obs" class="control-label">Descripción</label> 
+		<label for="obs" class="control-label">Descripción</label>
 		<p class="form-control-static form-control">@linea.descripcion</p>
 	</div>
 
