--- a/app/views/novedades/mainNovedades.scala.html
+++ b/app/views/novedades/mainNovedades.scala.html
@@ -10,6 +10,7 @@
 				<li class="titulo">Novedades</li>
 				@if(Componente.check("calendario")) {
 					<li><a href="@controllers.novedades.routes.NovedadesController.index()">Calendario</a></li>
+					<li><a href="@controllers.novedades.routes.NovedadesController.indexListaNovedades()">Lista Novedades</a></li>
 				}
 
 
