--- a/app/views/novedades/calendar/verNovedad.scala.html
+++ b/app/views/novedades/calendar/verNovedad.scala.html
@@ -16,8 +16,8 @@
 	</div>
 
 	<div class="col-sm-3">
-		<label class="control-label">Fecha y hora de inicio</label>
-		<p class="form-control-static form-control">@utils.DateUtils.formatDate(linea.fecha_inicio, "dd-MM-yyyy HH:mm")</p>
+		<label class="control-label">Fecha de inicio</label>
+		<p class="form-control-static form-control">@utils.DateUtils.formatDate(linea.fecha_inicio, "dd-MM-yyyy")</p>
 	</div>
 
 	<div class="col-sm-3">
