--- a/app/views/recupero/presupuestoLineas/lineaProducto.scala.html
+++ b/app/views/recupero/presupuestoLineas/lineaProducto.scala.html
@@ -5,7 +5,7 @@
 		<td class="accion-editar"><a class="btn btn-default btn-xs modificarProducto" href="@controllers.recupero.routes.PresupuestoLineasController.editar(linea.id)"><i class="glyphicon glyphicon-edit"></i></a></td>
 	}
 	<td>@if(linea.producto != null && linea.producto.codigo_ips != null ){@linea.producto.codigo_ips}</td>
-	<td>@linea.producto.nombre</td>
+	<td>@linea.producto.nombre @if(linea.nota != null){- @linea.nota}</td>
 	<!-- <td class="cuentaAnaliticaEnLinea">@if(linea.cuentaAnalitica == null){No asociada} else {@linea.cuentaAnalitica.codigo @linea.cuentaAnalitica.nombre}</td> -->
 	<td>@linea.udm.nombre</td>
 	<td>@linea.cantidad</td>
