--- a/app/views/recupero/recuperoCertificadoDeuda/indexCertificadoDeuda.scala.html
+++ b/app/views/recupero/recuperoCertificadoDeuda/indexCertificadoDeuda.scala.html
@@ -101,9 +101,12 @@
     } else {
     	<table id="listaPlanillas" class="table table-striped table-bordered">
 			<thead>
-				<tr style="background: #FFFFFF;">
-			        <td colspan="8">Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). </td>
-			    </tr>
+
+			    <tr style="background: #FFFFFF;">
+			        <td colspan="6">Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). </td>
+			        <td><b>Total:</b> <span class="baseFooter"></span></td>
+			        <td colspan="2">&nbsp</td>
+		        </tr>
 				<tr>
 					<th width="10"><input type="checkbox" name="checkAll" id="checkAll"/></th>
 					<th width="30">#</th>
@@ -128,7 +131,7 @@
 					<td>@(planilla.cliente.nombre)</td>
 					<td class="fecha">@if(planilla.fecha != null){@(utils.DateUtils.formatDate(planilla.fecha))}</td>
 					<td>@if(planilla.expediente != null){@(planilla.expediente.getExpedienteEjercicio())}</td>
-					<td class="total" rel="@planilla.getTotal()"  align="center">@(utils.NumberUtils.moneda(planilla.getTotal()))</td>
+					<td class="base" rel="@planilla.getTotal()"  align="center">@(utils.NumberUtils.moneda(planilla.getTotal()))</td>
 					<td class="estado" align="center">@if(planilla.estado != null){ @(planilla.estado.nombre)}</td>
 					<td>
 						<a class="btn btn-default btn-xs delete-confirm-link notSeleccion" href="@controllers.recupero.routes.RecuperoCertificadoDeudaController.eliminar(planilla.id)&@UriTrack.encode()">
@@ -141,7 +144,9 @@
 	        </tbody>
 	        <tfoot>
 		        <tr>
-			        <td colspan="8">&nbsp</td>
+			        <td colspan="6">&nbsp</td>
+			        <td><b>Total:</b> <span class="baseFooter"></span></td>
+			        <td colspan="2">&nbsp</td>
 
 		        </tr>
 	        </tfoot>
@@ -155,7 +160,13 @@ $( function (){
 	var n = 0;
 	var b = 0;
 	var c = 0;
+	var nb = 0;
 
+	$(".base").each(function (index) {
+
+		nb = Number($(this).attr("rel"))+nb
+	})
+	$(".baseFooter").append(formatNumberPesos(parseFloat(nb).toFixed(2)));
 
 	$( "#checkAll" ).click(function() {
 
@@ -170,18 +181,31 @@ function selectTrList(){
 	var n = 0;
 	var b = 0;
 	var c = 0;
+	var nb = 0;
+
+	$(".base").each(function (index) {
+		if($(this).parent().find("input[name='check_listado[]']").prop("checked")){
+			nb = Number($(this).attr("rel"))+nb
+		}
+	})
+	$(".baseFooter").empty();
+	$(".baseFooter").append(formatNumberPesos(parseFloat(nb).toFixed(2)));
 }
 
 function selectAll(){
 	var n = 0;
 	var b = 0;
 	var c = 0;
+	var nb = 0;
+
+
 	if($("#checkAll").prop("checked")){
 		$("input[name='check_listado[]']").prop( "checked", true );
 
 	}else{
 		$( "input[name='check_listado[]']").prop( "checked", false );
 	}
+	selectTrList();
 }
 
 </script>
