--- a/app/views/recupero/informes/informeGeneral.scala.html
+++ b/app/views/recupero/informes/informeGeneral.scala.html
@@ -87,7 +87,7 @@ $( function() {
 				</div>
 			</label>
 		</div>
-		<div class="col-sm-3">
+		<div class="col-sm-2">
 			<div class=" form-group">
 				<label class="control-label">Tipo de cliente</label>
 				@select(formBuscador("cliente_tipo_id"), ClienteTipo.find.all().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
@@ -138,7 +138,12 @@ $( function() {
 				</div>
 			</label>
 		</div>
-
+		<div class="col-sm-2">
+			<label class="control-label">
+				Judicial
+				@select(formBuscador("judicializado"),options(""->"","SI"->"SI","NO"->"NO"), 'class -> "form-control select")
+			</label>
+		</div>
 
 	</div>
 	<div class="row">
