--- a/app/views/recupero/recuperoCertificadoDeuda/indexCertificadoDeuda.scala.html
+++ b/app/views/recupero/recuperoCertificadoDeuda/indexCertificadoDeuda.scala.html
@@ -13,6 +13,10 @@
 		classEstado = "borrador"
 	}else if(i != null && i.id == 137){
 		classEstado = "autorizado"
+	}else if(i != null && i.id == 139){
+			classEstado = "cancelada"
+	}else if(i != null && i.id == 138){
+			classEstado = "pagado"
 	}
 	classEstado
 
