--- a/app/views/recupero/recuperoCertificadoDeuda/verCertificadoDeuda.scala.html
+++ b/app/views/recupero/recuperoCertificadoDeuda/verCertificadoDeuda.scala.html
@@ -80,6 +80,14 @@
 		</div>
 
 	</div>
+	<div class="row">
+		<div class="col-sm-12">
+			<label class="control-label">Nota</label>
+			 @certificado.nota
+		</div>
+
+
+	</div>
 
 	@views.html.recupero.recuperoCertificadoDeuda.tabsRecuperoCertificadoDeuda(false, certificadoForm,certificado)
 }
