--- a/app/views/recupero/recuperoCertificadoDeuda/formCertificadoDeuda.scala.html
+++ b/app/views/recupero/recuperoCertificadoDeuda/formCertificadoDeuda.scala.html
@@ -83,9 +83,14 @@ $(function(){
 				<div class="text-error">@error.message</div>
 			}
 		</div>
+	</div>
+	<div class="row">
+	<div class="col-sm-12">
+		<div class="form-group">
+			<label for="detalle" class="control-label">Nota</label>
+			@textarea(certificadoDeudaForm("nota"), 'class -> "form-control", 'id -> "nota", 'rows -> "5")
 
-
-
-
+		</div>
+	</div>
 
 	</div>
