--- a/app/views/recupero/recuperoCertificadoDeuda/verCertificadoDeuda.scala.html
+++ b/app/views/recupero/recuperoCertificadoDeuda/verCertificadoDeuda.scala.html
@@ -36,7 +36,7 @@
 			    <span class="caret"></span>
 			  </button>
 			  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-
+				<li><a id="accionAgregarNotaCertificadoDeuda" data-url="@controllers.recupero.routes.RecuperoCertificadoDeudaController.modalAgregarNotaCertificadoDeuda(certificado.id)">Agregar Nota</a></li>
 			  </ul>
 			</div>
 
@@ -83,7 +83,7 @@
 	<div class="row">
 		<div class="col-sm-12">
 			<label class="control-label">Nota</label>
-			 @certificado.nota
+			 <p class="form-control-static form-control">@certificado.nota</p>
 		</div>
 
 
