--- a/app/views/recupero/recuperoNotaDebito/indexRecuperoNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/indexRecuperoNotaDebito.scala.html
@@ -10,7 +10,12 @@
 			@if(Permiso.check("recuperoNotasEditar")) {
 
 				@if((rf.cae != null && !rf.cae.isEmpty() ) || !rf.puntoVenta.habilitado){
-					<a class="btn btn-default btn-xs" href="#" id="nuevoNotaDebito"><i class="glyphicon glyphicon-plus"></i> Nuevo</a>
+
+					@if(rf.recupero_certificado_deuda_id ==null){
+						<a class="btn btn-default btn-xs" href="#" id="nuevoNotaDebito"><i class="glyphicon glyphicon-plus"></i> Nuevo</a>
+					}else{
+						(La Factura está asignada a un Certificado de deuda.)
+					}
 				}else{
 					(La Factura no tiene un CAE asigna aun.)
 				}
