--- a/app/views/novedades/calendar/indexNovedades.scala.html
+++ b/app/views/novedades/calendar/indexNovedades.scala.html
@@ -1,5 +1,8 @@
+@(formBuscador: DynamicForm)
 @import helper._
 @import utils._
+@import models.auth._
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 @scripts = {
 	<script src="@routes.Assets.at("plugins/fullcalendar-2.2.7/lib/moment.min.js")" type="text/javascript"></script>
@@ -31,30 +34,65 @@
 
 	<div id="actions">
 
-			<form action="@controllers.novedades.routes.NovedadesController.lista()" id="formSearchNovedades" method="GET">
-
+			<form action="@controllers.novedades.routes.NovedadesController.index()" id="formSearchNovedades" method="GET">
+				<div class="row">
+					<div class="col-sm-10 filtrosEstados" id="filtrosEstados">
+						<div class="btn-group">
+						  <button type="button" rel="borrador" class="btn btn-default btn-filtros">
+						  	<i class="glyphicon glyphicon-pencil"></i><br>Licencias
+						  	@checkbox(formBuscador("btnFiltro[0]"), 'hidden -> "hidden")
+						  </button>
+						  <!--<button type="button" rel="abierta" class="btn btn-default btn-filtros">
+						  	<i class="glyphicon glyphicon-arrow-right"></i><br>Guardias
+						  	@checkbox(formBuscador("btnFiltro[1]"), 'hidden -> "hidden")
+						  </button>-->
+						  <button type="button" rel="cancelada" class="btn btn-default btn-filtros">
+						  	<i class="glyphicon glyphicon-minus-sign"></i><br>Cancelado
+						  	@checkbox(formBuscador("btnFiltro[2]"), 'hidden -> "hidden")
+						  </button>
+						</div>
+					</div>
+				</div>
 				<div class="row">
 					<div class="col-sm-3">
 						<label for="servicio" class="control-label">Servicio</label>
 						<div class="input-group">
-							<input type="hidden" name="servicio_id" id="bservicio_id" />
-							<input type="text" name="servicio" id="bservicio" class="form-control" autocomplete="off" />
+
+							@inputText(formBuscador("servicio.nombre"), 'name -> "", 'class -> "form-control", 'id -> "organigrama", 'disabled -> "disabled" )
+							@inputText(formBuscador("servicio_id"), 'hidden -> "hidden", 'id -> "organigrama_id")
 							<span class="input-group-addon">
-							<a href="#" class="searchModal"
+							<!--<a href="#" class="searchModal"
 										id="buscarServicio"
 										data-title="Selección de servicios"
 										data-url="@controllers.administracion.routes.OrganigramasController.modalBuscarServicios()"
 										data-height="650"
 										data-width="700"
 										data-listen="modal.seleccion.servicio.simple"
-										data-label="#bservicio"
-										data-field="#bservicio_id">
+										data-label="#organigrama"
+										data-field="#organigrama_id">
 								<i class="glyphicon glyphicon-search"></i>
-							</a>
+							</a>-->
 							</span>
 						</div>
 					</div>
 					<div class="col-sm-3">
+					<label class="control-label">Agente
+						<div class="input-group">
+							@inputText(formBuscador("agente.nombre"), 'name -> "", 'class -> "form-control", 'id -> "agente")
+							@inputText(formBuscador("agente_id"), 'hidden -> "hidden", 'id -> "agente_id")
+							<span class="input-group-addon">
+								<a href="#" id="searchAgente"
+								data-title="Selección de agente"
+								data-url="@controllers.rrhh.routes.AgentesController.modalBuscar()"
+								data-height="650" data-width="700"
+								data-listen="modal.seleccion.agente.simple"
+								data-label="#agente" data-field="#agente_id">
+								<i class="glyphicon glyphicon-search"></i></a></span>
+						</div>
+					</label>
+					</div>
+
+					<!-- <div class="col-sm-3">
 						<label class="control-label">Agente
 							<div class="input-group">
 								<input type="hidden" name="agente_id" id="bagente_id" />
@@ -62,7 +100,7 @@
 								<span class="input-group-addon"><a href="#" id="buscarAgente" data-title="Selección de agente" data-url="@controllers.rrhh.routes.AgentesController.modalBuscar()" data-height="650" data-width="700" data-listen="modal.seleccion.agente.simple" data-label="#bagente" data-field="#bagente_id"><i class="glyphicon glyphicon-search"></i></a></span>
 							</div>
 						</label>
-					</div>
+					</div> -->
 
 				<div class="col-sm-2">
 					<div class="form-group">
